chore: Require Java 21 / GoCD 24.1.0